Fix navbar overflow

--- a/src/recipe_list/recipe_list.css
+++ b/src/recipe_list/recipe_list.css
@@ -213,6 +213,7 @@ p {
 .sidebar a {
     font-size: 25px;
     top: 50px;
+    width: 250px;
     position:relative;
     color: #e3d477;
     padding: 8px 8px 8px 32px;
